samples/_failures_safe/1761417541_d85b69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baef44c4.c: In function ‘main’:
./samples/SAFE/__tmp_baef44c4.c:155:10: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  155 |     for (size
      |          ^~~~
      |          size_t
./samples/SAFE/__tmp_baef44c4.c:155:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_baef44c4.c:155:14: error: expected ‘;’ at end of input
  155 |     for (size
      |              ^
      |              ;
./samples/SAFE/__tmp_baef44c4.c:155:5: error: expected declaration or statement at end of input
  155 |     for (size
      |     ^~~
